# sop-mas-ecrp

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml
data/: NLP4LP.csv
experiments/solver_execution/: analyze.py  solver_execution.csv  summary.md
experiments/token_overhead/: README.md  adapter.py  aggregate.py  config.yaml  instances.yaml  mako_invoke.py  plot_tradeoff.py  run_overhead.py  select_instances.py  summary.csv  summary.md  summary.tex
experiments/topp_ablation/: README.md  aggregate.py  config.yaml  config_models.yaml  run_ablation.py
gis_data/: all_cities.json  dry_port_coords.json  reposition_cost.csv  sea_port_coords.json  shippers&consignees_coord.json  shippers&consignees_district.json
paper/: .$sop_mas_flowchat.drawio.bkp  sop_mas_flowchat.drawio
paper/latex_source_files/: elsarticle-template-num-names.tex
paper/manuscript/: compile.sh  elsarticle-template-num-names.aux  elsarticle-template-num-names.bbl  elsarticle-template-num-names.blg  elsarticle-template-num-names.fdb_latexmk  elsarticle-template-num-names.fls  elsarticle-template-num-names.out  elsarticle-template-num-names.tex  elsarticle-template-num.aux  elsarticle-template-num.bbl  elsarticle-template-num.blg  elsarticle-template-num.fdb_latexmk  elsarticle-template-num.fls  elsarticle-template-num.out  elsarticle-template-num.tex  elsarticle-template-num_archive.tex  markup.sty  ref_sop_mac.bib  response_letter.fdb_latexmk  texput.fls
paper/review/: .latexmkrc  asc_reivew.md  filter_toc.sh  ijpr_review.md  response_letter.aux  response_letter.fdb_latexmk  (+4 more)
(+166 files in other folders)
